feat: 3차 수정본 재업

--- a/_posts/2023-10-03-hello.md
+++ b/_posts/2023-10-03-hello.md
@@ -46,7 +46,7 @@ tags: article
 
 이상의 6가지 조건들을 기준으로 비교 분석을 실시한다.
 
-이 6가지 요인이 게임성을 측정하는 최적의 측정 리스트라고 보긴 힘들 것이다. 그러나 시중에 공개된 정보로 보다 다양한 요소들을 고려해볼 필요성을 시사할 수는 있다. !
+이 6가지 요인이 게임성을 측정하는 최적의 측정 리스트라고 보긴 힘들 것이다. 그러나 시중에 공개된 정보로 보다 다양한 요소들을 고려해볼 필요성을 시사할 수는 있다.
 
 
 ### III. 비교 분석
