--- a/_posts/2023-10-03-hello.md
+++ b/_posts/2023-10-03-hello.md
@@ -5,7 +5,7 @@ author: Kimyeongmok
 tags: article
 ---
 
-요약 – 최근 대규모 프로젝트 게임 개발이 늘어남에 따라 게임의 흥행 성패에 따른 제작사들의 부담과 게이머들의 실망 역시 늘어나고 있다. 이 글은 그러한 점들을 해결하기 위한 기준과 지표 건설을 목적으로 한다. 이를 위해 6가지 기준을 잡아 Steam 인기 게임들의 흥행 요인을 분석하여 인기 요인들을 꼽아보았다. 그리고 그중에서도 가장 큰 성공을 거둔 “Elden Ring”이 높은 점수를 받은 부분들에 주목하여 게임은 유저들에 맞춰 지나친 편의성에 초점을 맞추기보단 유저들의 목표 성취감을 고양시킬 수 있는 시스템을 만들어내는 편이 좋다는 결론을 내렸다.
+>최근 대규모 프로젝트 게임 개발이 늘어남에 따라 게임의 흥행 성패에 따른 제작사들의 부담과 게이머들의 실망 역시 늘어나고 있다. 이 글은 그러한 점들을 해결하기 위한 기준과 지표 건설을 목적으로 한다. 이를 위해 6가지 기준을 잡아 Steam 인기 게임들의 흥행 요인을 분석하여 인기 요인들을 꼽아보았다. 그리고 그중에서도 가장 큰 성공을 거둔 “Elden Ring”이 높은 점수를 받은 부분들에 주목하여 게임은 유저들에 맞춰 지나친 편의성에 초점을 맞추기보단 유저들의 목표 성취감을 고양시킬 수 있는 시스템을 만들어내는 편이 좋다는 결론을 내렸다.
 
 ## 서론
 
