feat: 이미지 업로드

--- a/_posts/2023-10-03-hello.md
+++ b/_posts/2023-10-03-hello.md
@@ -50,12 +50,21 @@ tags: article
 
 
 ### III. 비교 분석
+
+![본문 표1](../images/20231003/01.png)
+표-1. Steam 인기 게임 각 지표에 관한 Steam 차트 인용[1]
+
 ->	권장 사양은 낮은 편이 좋으며, 유저 평과 Metacritic 평이 높은 액션류가 잘 팔린다.
 
 표를 보면 권장 사양의 대다수가 중을 기록하며 주로 높지 않은 권장 사양의 게임들이 인기 게임의 다수를 차지했음을 알 수 있다. 이것은 높은 수준의 사양을 필요로 하는, 높은 품질의 그래픽과 사운드를 제공하는 게임보다는 유저들 대다수의 하드웨어 환경에 맞게 제작한 맞춤형 게임들이 강세라는 점을 보여준다. 또한 유저 평가와 매체 평가에서는 두 부문 모두 중간 수준의 평가를 받은 “배틀필드 2042”등의 예외가 있지만 대체로 중상 이상의 평을 받은 작품들이 다수를 차지했음을 알 수 있다. 가격에서는 10가지 샘플 모두 다양한 가격대에 위치하였다. 즉, 유저들은 자신들이 마음에 들어 하는 게임이 있을 경우 금액에 크게 신경을 쓰지 않음을 알 수 있다. 최다 동시 접속자 수에서는 모든 게임이 다 10만 이상의 상위 스코어를 기록하면서 판매 수익과 정비례하는 양상을 보였다. 마지막으로 장르에서는 단연 액션 장르가 인기가 많음이 드러났다. 표에서는 FPS, MMORPG 등 세세한 기준으로 나눠 놨지만 큰 틀에서는 모두 전투, 폭파, 추격 등을 메인 컨텐츠로 하는 액션 장르에 들어간다.
 
 
 ### IIII. 두드러진 Elden Ring의 흥행
+
+![본문 표2](../images/20231003/02.png)
+표-2. Elden Ring 등 인기 게임들의 Statistics를 HowToBeat에서 인용[2]
+
+
 표본들 중 가장 눈에 띄는 흥행을 거둔 작품은 단연 “Elden Ring”이었다. Main Story가 존재하는 게임들을 뽑아 위의 부문들을 조사해보았다. “HowLongToBeat” 사이트에서 자체 집계한 기록들이기에 정확하다고 볼 순 없으나 어느 정도의 경향성은 파악할 수 있다.
 
 위의 표에서 GOTY란 세계에서 가장 공신력 있는 게임 시상식에서의 수상을 의미한다. 그런 면에서 Most played, Most Reviews에서 1위, GOTY 수상까지 한 “Elden Ring”은 2020~2022에 출시한 작품들 중 가장 큰 흥행과 비평을 잡은 작품이라고 하여도 될 것이다. 그렇다면 이러한 “Elden Ring”의 성공의 이유는 무엇인가?
