--- a/_posts/2023-10-03-hello.md
+++ b/_posts/2023-10-03-hello.md
@@ -52,7 +52,7 @@ tags: article
 ### III. 비교 분석
 
 ![본문 표1](../images/20231003/01.png)
-표-1. Steam 인기 게임 각 지표에 관한 Steam 차트 인용[1]
+그림-1. Steam 인기 게임 각 지표에 관한 Steam 차트 인용[1]
 
 ->	권장 사양은 낮은 편이 좋으며, 유저 평과 Metacritic 평이 높은 액션류가 잘 팔린다.
 
@@ -62,7 +62,7 @@ tags: article
 ### IIII. 두드러진 Elden Ring의 흥행
 
 ![본문 표2](../images/20231003/02.png)
-표-2. Elden Ring 등 인기 게임들의 Statistics를 HowToBeat에서 인용[2]
+그림-2. Elden Ring 등 인기 게임들의 Statistics를 HowToBeat에서 인용[2]
 
 
 표본들 중 가장 눈에 띄는 흥행을 거둔 작품은 단연 “Elden Ring”이었다. Main Story가 존재하는 게임들을 뽑아 위의 부문들을 조사해보았다. “HowLongToBeat” 사이트에서 자체 집계한 기록들이기에 정확하다고 볼 순 없으나 어느 정도의 경향성은 파악할 수 있다.
