--- a/_posts/2023-10-03-hello.md
+++ b/_posts/2023-10-03-hello.md
@@ -71,9 +71,11 @@ tags: article
 
 위의 표에서 GOTY란 세계에서 가장 공신력 있는 게임 시상식에서의 수상을 의미한다. 그런 면에서 Most played, Most Reviews에서 1위, GOTY 수상까지 한 “Elden Ring”은 2020~2022에 출시한 작품들 중 가장 큰 흥행과 비평을 잡은 작품이라고 하여도 될 것이다. 그렇다면 이러한 “Elden Ring”의 성공의 이유는 무엇인가?
 
- 위의 표를 보면 “Elden Ring”은 Most completed, Most Rated, Longest games 부문에서도 모두 가장 높은 순위를 차지하고 있다. Most Rated와 Longest games의 높은 지수는 Elden Ring의 게임 난이도가 상대적으로 어렵다는 반증이다. 반면에 Most completed는 그러한 난이도에도 불구하고 유저들이 끝까지 게임을 complete할 수 있는 재미와 몰입감을 준다는 것을 알 수 있다.
- 어려운 난이도와 높은 실패율에도 “Elden Ring”이 가장 대중적인 히트를 친 이유는 무엇일까. 한국 컨텐츠 진흥원에서 발행한 2023년 1,2월호 <글로벌_게임산업_트렌드>[3] 글에 따르면 현대 게임의 친절성과 편리성이 높아지면서 게임 이용자들이 오히려 게임 내에서 새로운 컨텐츠를 발견하고 재미를 느낄 수 있는 부분들이 배제되고 있는 성향 때문이라고 한다.
- “Elden Ring”은 과거 Dark Soul 시리즈를 발매하며 소울류라는 높은 게임 난이도를 특징으로 삼아 게이머들 사이에서 소문을 탔다. 그러한 특성에서 “Elden Ring”은 오픈 월드라는 모험적 컨텐츠를 도입하여 유저들이 자신만의 공략 방법과 모험 내용 등 미지의 컨텐츠들을 생성하고 즐길 수 있게 해주었던 것이다. 그러한 점이 “Elden Ring”의 이러한 대히트의 원인이 아닐까 생각해본다.
+위의 표를 보면 “Elden Ring”은 Most completed, Most Rated, Longest games 부문에서도 모두 가장 높은 순위를 차지하고 있다. Most Rated와 Longest games의 높은 지수는 Elden Ring의 게임 난이도가 상대적으로 어렵다는 반증이다. 반면에 Most completed는 그러한 난이도에도 불구하고 유저들이 끝까지 게임을 complete할 수 있는 재미와 몰입감을 준다는 것을 알 수 있다.
+
+어려운 난이도와 높은 실패율에도 “Elden Ring”이 가장 대중적인 히트를 친 이유는 무엇일까. 한국 컨텐츠 진흥원에서 발행한 2023년 1,2월호 <글로벌 게임산업 트렌드>[3] 글에 따르면 현대 게임의 친절성과 편리성이 높아지면서 게임 이용자들이 오히려 게임 내에서 새로운 컨텐츠를 발견하고 재미를 느낄 수 있는 부분들이 배제되고 있는 성향 때문이라고 한다.
+
+“Elden Ring”은 과거 Dark Soul 시리즈를 발매하며 소울류라는 높은 게임 난이도를 특징으로 삼아 게이머들 사이에서 소문을 탔다. 그러한 특성에서 “Elden Ring”은 오픈 월드라는 모험적 컨텐츠를 도입하여 유저들이 자신만의 공략 방법과 모험 내용 등 미지의 컨텐츠들을 생성하고 즐길 수 있게 해주었던 것이다. 그러한 점이 “Elden Ring”의 이러한 대히트의 원인이 아닐까 생각해본다.
 
 요지는 게임을 클리어하는 것이 목표가 아니라 실패와 새로움을 통한 즐거움을 강조하는 작품으로써 이러한 작품을 통해 게이머들이 게임을 하는 근본 이유에 대해 다시 생각해 볼 수 있다고 생각한다.
 
